uz language json

--- a/site/src/assets/i18n/uz.json
+++ b/site/src/assets/i18n/uz.json
@@ -11,13 +11,13 @@
     "fullName": "F.I.SH."
   },
   "about": {
-    "headline": "Общество с ограниченной ответственностью Страховая Компания «ALSKOM-VITA» (далее – «Компания») создана решением Наблюдательного совета Акционерного общества Страховой Компании «ALSKOM» от 4 апреля 2019 года, учитывая перспективы развития отрасли страхования жизни в Республике Узбекистан, с целью оказания комплексных услуг по накопительному страхованию жизни, добровольному медицинскому страхованию, страхованию выезжающих за рубеж, страхование от различных заболеваний.",
-    "listTitle": "Целью Компании является:",
-    "listItem1": "обеспечение надежных страховых гарантий потребителям страховых услуг;",
-    "listItem2": "внедрение новых финансовых инструментариев, способствующие удовлетворению потребности трудоустроенных слоев населения в накоплении денежных средств в длительной перспективе и страховой защите их жизни и здоровья;",
-    "listItem3": "удовлетворение прогнозируемого роста потребности населения в страховых услугах (накопительные виды страхования жизни, добровольное медицинское страхование, страхование жизни и здоровья от несчастных случаев и др.);",
-    "listItem4": "внедрение в практику международных стандартов страхования жизни и здоровья.",
-    "footer": "Компании выдана лицензия Министерства финансов Республики Узбекистан серии SF № 243 от 29 мая 2019 года на осуществление страховой деятельности в добровольной форме по всем классам отрасли страхования жизни, а также 1 и 2 классам отрасли общего страхования. <br>Сформированный уставный капитал Компании составляет эквивалент 10,11 млрд. сум. <br> Компания предлагает качественные страховые услуги, финансовую защиту на случай непредвиденных обстоятельств, а также возможность формирования накоплений и увеличения капитала. <br> “ALSKOM-VITA” - Защитит то, что действительно дорого – Вашу жизнь, благополучие Ваших близких и Ваше будущее."
+    "headline": "“ALSKOM-VITA” sug’urta kompaniyasi ma’suliyati cheklangan jamiyati (keyingi o’rinlarda “Kompaniya” deb ataladi) O’zbekiston Respublikasida hayotni sug’urtalash sohasini rivojlanish istiqbollarini inobatga olib, hayotni jamg’arib sug’urtalash, ixtiyoriy tibbiy sug’urta, xorijga chiquvchilarni sug’urtalash, turli kasalliklardan sug’urtalash bo’yicha kompleks xizmatlar ko’rsatish maqsadida “ALSKOM” sug’urta kompaniyasi aksiyadorlik jamiyati Kuzatuv kengashining 2019 yil 4 apreldagi qarori bilan tashkil etildi.",
+    "listTitle": "Quyidagilar Kompaniyaning maqsadlari hisoblanadi:",
+    "listItem1": "sug’urta xizmatlaridan foydalanuvchilarga ishonchli sug’urta kafolatlarini ta’minlash;",
+    "listItem2": "aholining ish bilan band qatlamlarini uzoq istiqbolga pul mablag’larini jamg’arish hamda ularning hayoti va sog’ligini sug’urta himoyasi bilan ta’minlash ehtiyojlarini qanoatlantirish imkonini beradigan yangi moliyaviy vositalarni joriy etish;",
+    "listItem3": "aholi keng qatlamlarini sug’urta xizmatlariga (hayotni sug’urtalashning  jamg’arib boriladigan turlari, ixtiyoriy tibbiy sug’urta, hayotni va salomatlikni baxtsiz hodisalardan sug’urtalash va boshqalar) bo’lgan ehtiyojini to’laqonli qanoatlantirish;",
+    "listItem4": "hayot va sog’likni sug’urtalashning xalqaro standartlarini amaliyotga tatbiq etish.",
+    "footer": "Kompaniyaga hayotni sug’urta qilish tarmog’ining barcha klasslari, shuningdek, umumiy sug’urta tarmog’ining 1 va 2 klasslari bo’yicha ixtiyoriy shaklda sug’urta faoliyatini amalga oshirish uchun O’zbekiston Respublikasi Moliya Vazirligi tomonidan 2019 yil 29 mayda SF 243-son litsenziya berilgan. <br> Kompaniyanig shakllangan ustav kapitali 10,11 milliard so’mni tashkil etadi. <br>Kompaniya kutilmagan vaziyatlarda moliyaviy himoyani ta’minlaydigan sifatli sug’urta xizmatlarini, shuningdek kapitalni jamg’arib borish va ko’paytirish imkoniyatini taklif etadi. <br> “ALSKOM-VITA” – Siz uchun eng qimmatli bo’lgan hayotingizni, yaqinlaringiz farovonligini va kelajagingizni himoya qiladi!"
   },
   "common": {
     "home": "Bosh sahifa",
