--- a/site/src/assets/i18n/en.json
+++ b/site/src/assets/i18n/en.json
@@ -1,8 +1,8 @@
 {
   "home": {
     "insuranceOffer": "Insurance case",
-    "heroTitle": "The first company to  <br>  make life insurance",
-    "heroContent": "The main goal of creating a new insurance company is to <br>   indicate the expansion and  development of the business by providing customers  <br>  with comprehensive insurance services."
+    "heroTitle": "\"ALSKOM-VITA\"",
+    "heroContent": "It will protect what is really expensive - your life, <br> the well-being of your loved ones and your future."
   },
   "contact": {
     "title": "Feedback",
