--- a/site/src/assets/i18n/ru.json
+++ b/site/src/assets/i18n/ru.json
@@ -1,8 +1,8 @@
 {
   "home": {
     "insuranceOffer": "Страховой случай",
-    "heroTitle": "Первая компания которая делает <br> страхования жизни",
-    "heroContent": "Основной целью создания новой страховой <br> компании указываются расширение и развитие <br> бизнеса путем предоставления клиентам <br> комплексных страховых услуг."
+    "heroTitle": "\"ALSKOM-VITA\"",
+    "heroContent": "Защитит то, что действительно дорого - Вашу жизнь, <br> благополучие Ваших близких и Ваше будущее."
   },
   "contact": {
     "title": "Обратная связь",
