--- a/site/src/assets/i18n/uz.json
+++ b/site/src/assets/i18n/uz.json
@@ -1,8 +1,8 @@
 {
   "home": {
     "insuranceOffer": "Sugʻurta hodisasi",
-    "heroTitle": "Hayotni sug'urta qiladigan <br> birinchi kompaniya",
-    "heroContent": "Yangi sug'urta kompaniyasini tashkil etishdan asosiy maqsad <Br> mijozlarga keng  ko'lamli sug'urta  xizmatlarini taqdim etish orqali  <Br> biznesning kengayishi va rivojlanishini ko'rsatadi."
+    "heroTitle": "“ALSKOM-VITA”",
+    "heroContent": "Siz uchun eng qimmatli bo’lgan hayotingizni, <br> yaqinlaringiz farovonligini va kelajagingizni himoya qiladi!"
   },
   "contact": {
     "title": "Qayta aloqa",
