1. move products above (about us) 2. Remove (Home) button, make LOGO ACTIVE as Home button 3. after the LANGUAGE change button in the corner add CONTACT NUMBERS 4. each 2nd page give slightly orange and purple  background but hardly visible

--- a/site/src/assets/i18n/en.json
+++ b/site/src/assets/i18n/en.json
@@ -36,7 +36,8 @@
     "close":"Close",
     "description":"Description",
     "experience":"Experience",
-    "partners": "Partners"
+    "partners": "Partners",
+    "order":"Order"
   },
   "footer": {
     "followUs": "Follow us",
