--- a/site/src/assets/i18n/ru.json
+++ b/site/src/assets/i18n/ru.json
@@ -36,7 +36,8 @@
     "close": "Закрыть",
     "description": "Описание",
     "experience": "Опыт",
-    "partners": "Партнеры"
+    "partners": "Партнеры",
+    "order":"Заказать"
   },
   "footer": {
     "followUs": "Подписывайтесь на нас",
